solved the isuue not showing the map when rendering

--- a/src/styles/ShowMap.scss
+++ b/src/styles/ShowMap.scss
@@ -1,6 +1,13 @@
+#root, #map {
+  height: 100vh;
+  width:  100vw;
+  // margin: 0 auto;
+  // // justify-content: baseline;
+}
+
 #map {
   height: 80vh;
-  width: 90%;
-  margin: 0 auto;
+  width:  80vw;
+  margin: 50px auto;
   justify-content: baseline;
   }
